# PEF

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  run_all_tests.sh
src/: main.cpp
src/include/pef/: pef_vector_opt.hpp  util.hpp
test/src/: pef_vector_opt_test.cpp  test_utils.cpp  test_utils.hpp
